fixed name too long on profile box

--- a/app/assets/stylesheets/homepage/profile_box.scss
+++ b/app/assets/stylesheets/homepage/profile_box.scss
@@ -20,6 +20,10 @@
     padding-bottom: 10px;
     border-bottom: 1px solid #cdcdcd;
     letter-spacing: .5px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 120px;
   }
 
   a {
